traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Compilation error:
TraversalByColumn:4: error: not found: value setPose
        setPose(getX+1,Y)
        ^TraversalByColumn:4: error: not found: value Y
        setPose(getX+1,Y)
                       ^TraversalByColumn:5: error: overloaded method value writeMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
        writeMessage()
        ^TraversalByColumn:8: error: not found: value setPose
        setPose(0,Y+1)
        ^TraversalByColumn:8: error: not found: value Y
        setPose(0,Y+1)
                  ^TraversalByColumn:9: error: overloaded method value writeMessage with alternatives:
  (x$1: Int)Unit <and>
  (x$1: String)Unit
 cannot be applied to ()
        writeMessage()
        ^TraversalByColumn:2: error: type mismatch;
 found   : Unit
 required: Boolean
    while ((getX()!=getWorldWidth()) && getY()==getWorldHeight()){
    ^