traversal.column.traversalbycolumn.TraversalByColumn.scala.code
override def run() {
  def positionFinale():Boolean={
    while ((getX()!=getWorldWidth()) && getY()==getWorldHeight()){
      if (getX()!=6){
        setPose(getX+1,Y)
        writeMessage()
      }
      if (getX()==6){
        setPose(0,Y+1)
        writeMessage()
      }
    }
  }
  
positionFinale()
}